# calibre-updatr-rs

./: .gitignore  Cargo.toml  README.md  config.toml
src/: app.rs  calibre.rs  config.rs  dups.rs  main.rs  metadata.rs  runner.rs  state.rs
