[package]
name = "calibre-updatr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["clock"] }
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
sha2 = "0.10.8"
tempfile = "3.12.0"
which = "7.0.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
